# Russian-Roulette

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-test.yml
docs/: CNAME  index.html  style.css
russian_roulette/: Cargo.toml
russian_roulette/src/: main.rs
src/: app.rs  config.rs  game.rs  main.rs  ui.rs
