[package]
name = "russian_roulette"
version = "1.3.0"
edition = "2024"
authors = ["Aniket Chavan"]
license = "MIT"
repository = "https://github.com/aniketchavan2211/Russian-Roulette.git"

description = """
A safe, cross-platform TUI game written in Rust that simulates
Russian Roulette mechanics. The revolver cylinder spins on demand,
randomly placing a single bullet among six chambers. Players may spin,
fire, or quit at will. The game ends after six safe rounds or one fatal shot.
"""

[dependencies]
rand = "0.9"
crossterm = "0.28"
ratatui = "0.26"
